# qwebdomo-openwrt

qt5/: Makefile  Makefile-qt4
qt5/files/: qmake.conf  qmake.mk
qt5/patches/: 001-hostpython.patch
qtserialport/: Makefile
qtserialport/files/: CMakeLists.txt  QSerialPort  QSerialPortInfo  QtSerialPort  QtSerialPortVersion
qwebdomo/: Makefile
qwebdomo/files/: CMakeLists.txt
qwebdomo/files/plugins/fake/: CMakeLists.txt
qwebdomo/files/plugins/thermostat/: CMakeLists.txt
qxmpp/: Makefile
